public/scss/components/Product.module.scss
@import '../utils/variables';
@import '../components/Placeholder.module.scss';

.product
{
  &_container
  {
    margin: 5px 0 24px;

    &Item
    {
      @include flex(row, flex-start, flex-start);
      white-space: nowrap;
      overflow-x: scroll;
      @extend .scrollbar_none;
    }

    &Title
    {
      border-bottom: 1px solid $color_border;
      margin-bottom: 24px;
    }
  }

  &_homeTitle
  {
    @include typographyBuilder(secondary, 400, 14, 24);
    color: $color_text_inactive;
    padding: 12px 0;
    margin: 0 15px;
    cursor: pointer;

    &:hover
    {
      color: $color_text_primary;
    }

    &Active
    {
      color: $color_text_primary;
      border-bottom: 2px solid $color_rose;
    }
  }

  &_item
  {
    position: relative;
    margin: 0 8px;
    width: min-content;

    &:first-child
    {
      margin-left: 0;
    }

    &:last-child
    {
      margin-right: 0;
    }
  }

  &_sticker
  {
    position: absolute;
    top: 0;
    right: 0;
    text-align: center;
  }

  &_stickerGrid
  {
    right: 15px
  }

  &_stickerLabel
  {
    @include typographyBuilder(secondary, 600, 10, 16);
    width: fit-content;
    padding: 3px 8px;
    display: table-cell;
    vertical-align: middle;

    &__outofstock
    {
      background: $color_text_secondary;
      color: $color_white;
    }

    &__sale
    {
      background: $color_error;
      color: $color_white;
    }

    &__openorder
    {
      background: $color_info;
      color: $color_white;
    }

    &__comingsoon
    {
      background: $color_warning;
      color: $color_white;
    }

    &__new
    {
      background: $color_success;
      color: $color_white;
    }

    &__preorder
    {
      background: $color_rose;
      color: $color_white;
    }
  }

  &_link
  {
    &__image
    {
      width: 130px;
      object-fit: contain;
    }
  }

  &_label
  {
    @include flex(row, flex-start, flex-start, true);
    padding: 10px 0 0;

    &__container
    {
      order: 3;
    }

    &__title
    {
      @include typographyBuilder(secondary, 600, 14, 24);
      margin-bottom: 5px;
      white-space: normal;
      overflow: hidden;
      display: block;
      display: -webkit-box;
      text-overflow: ellipsis;
      -webkit-box-orient: vertical;
      -webkit-line-clamp: 2;
      max-height: 45px;
    }
  }

  &_labelPrice
  {
    @include typographyBuilder(secondary, 400, 14, 16);
    color: $color_rose;
    margin-bottom: 0;

    &__container
    {
      order: 4;
    }
    
    &__sale
    {
      @include fontSize(12);
      display: block;
      color: $color_text_placeholder;
      text-decoration: line-through;
    }

    &__price
    {
      display: block;
      color: $color_error;
    }
  }

  &_itemContainer
  {
    margin-bottom: 32px;

    &Image
    {
      width: 100%;
    }
  }

  &_category
  {
    &__container
    {
      order: 1;
      margin: 0;
      padding: 0;

      ul, ol
      {
        @include fixedWidth(100%);
        @include typographyBuilder(secondary, 400, 11, 12);
        display: inline-block;
        position: relative;
        margin: 0;
        padding: 0;
        white-space: nowrap;
        word-break: keep-all;
        text-overflow: ellipsis;
        overflow: hidden;
        color: $color_rose;

        li
        {
          &::after
          {
            content: ", ";
          }

          &:last-child,
          &:last-of-type,
          &:only-child,
          &:only-of-type
          {
            &::after
            {
              content: none;
            }
          }

          &,
          span,
          a,
          div
          {
            display: inline;
            position: relative;
            margin: 0;
            padding: 0;
            white-space: nowrap;
            word-break: keep-all;
            text-overflow: ellipsis;
            overflow: hidden;
          }

          a
          {
            @include typographyBuilder(secondary, 400, 11, 12);
            color: $color_rose;
            text-decoration: none;

            &:hover,
            &:focus
            &:focus-visible
            {
              color: $color_rose;
              text-decoration: underline;
            }
          }
        }
      }
    }

    &__parent
    {
      list-style-type: none;
      margin: 0;
    }

    &__items
    {
      @include typography_builderSecondary(400, 11, 12);
    }
  }

  &_rating
  {
    &__container
    {
      @include flex(row, flex-start, space-between);
      order: 2;
      align-self: center;
      margin-left: auto;
      margin-bottom: 3px;
    }

    &__wrapper
    {
      @include flex(row, flex-end, space-between, false);
      @include typographyBuilder(secondary, 400, 11, 12);
      color: $color_rose;
    }

    &__count
    {
      margin-left: 2px;
    }

    &__reviewCount
    {
      margin-left: 2px;
    }
  }
}

